* Remove respondToReadyState() from the dom-loaded solution, tweak the `doScroll` approach, and ensure `readyState` and `doScroll` approaches continue until one succeeds. [Hedger Wang, jddalton, Thomas Aylott]

* Make Fuse.Array.Plugin methods use bitwise shift operators >>> and >> instead of parseInt(). [Ben Laurie, jddalton]

* Ensure String primatives are passed to eval(). [jddalton]

* Optmized Fuse.Number#toPaddedString by avoiding costly method calls. [jddalton]

* Ensure String#lastIndexOf returns Fuse.Number() values and make string methods conform to spec by cohercing `this` to a string and throwing if `this` is null/undefined. [jddalton]

* Optimize Fuse.String#trim. [jQuery Trac #2279] [Ariel Flesler, DarkRyder, jddalton, phpmyforum, Steven Levithan]

* Make Fuseboxed RegExp constructor automatically fix buggy "\s" character matches in regexp patterns. [jddalton]

* Fix Chrome issue with iframe sandboxes by using the __proto__ mode by default. [jddalton]

* Fixed Konqueror Element#replace bug in _createContextualFragment() that threw errors when passed incompatible markup. [jddalton, kangax]

* Allow objects to execute their own `clone` method when passed to Fuse.Object.clone(). [jddalton]

* Make the Fuse.List methods intentionally generic so they don't require that their `this` value be an Array object. [jddalton]

* unit test: Correct a return statement in the DOM unit test `setup` method. [Ihab Awad, Tobie Langel]

* Optimize Element#isFragment to use Element#compareDocumentPosition if available. [Diego Perini, jddalton]

* unit test: Add tests for table elements to the Element#isVisible unit tests. [jddalton]

* Optimize Element._getContentFromAnonymousElement() by replacing a Fuse.Number#times call with a while-loop. [jddalton, kangax]

* Optimize NWMatcher by passing a Fuse.List to its select() method and update other engines. [Diego Perini, jddalton]
